hphp/test/slow/coeffects/parse-lambda-2.php.expectf
Fatal error: A lambda cannot have a polymorphic context in %s on line 4
